auth api and documentation updated with test user
